src/objects/Criminal_History__c.object
<CustomObject>
	<fields>
        <fullName>Armed_BAP_Date__c</fullName>
        <description>Used to be CrimHistArmedBAPDate in Venture</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Armed BAP Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BAP_Date__c</fullName>
        <description>BAP_Date__c</description>
        <encryptionScheme>None</encryptionScheme>
        <label>BAP Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Compliance_Return_Date__c</fullName>
        <description>Used to be CrimHistCTSReturnDate in Venture</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Compliance Return Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Compliance_Review_Date__c</fullName>
        <description>Used to be CrimHistCTSReviewDate in Venture</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Compliance Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Compliance_Sent_Date__c</fullName>
        <description>Date sent to Compliance CTSSentDate in Venture</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Compliance Sent Date</label>
        <type>Date</type>
    </fields>
	<fields>
        <fullName>Criminal_History_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Criminal History Comment</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Criminal_History_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Criminal History Id</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Denied_To_Date__c</fullName>
        <description>Criminal History Denied To Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Denied To Date</label>
        <type>Date</type>
    </fields>
	<fields>
        <fullName>Domestic_Violence__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to be CrimHistDomesticViolence in Venture</description>
        <label>Domestic Violence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employer_UBI__c</fullName>
        <description>Used to be CrimHistEmployerUBI in Venture</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Employer UBI</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failure_To_Respond__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Failure To Respond</label>
        <type>Checkbox</type>
    </fields>
	<fields>
        <fullName>License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License</label>
        <referenceTo>MUSW__License2__c</referenceTo>
        <relationshipLabel>Criminal History</relationshipLabel>
        <relationshipName>Criminal_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mental_Commitment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mental Commitment</label>
        <type>Checkbox</type>
    </fields>
	<fields>
        <fullName>Misrepresentation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Misrepresentation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Protection_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Protection Order</label>
        <type>Checkbox</type>
    </fields>
	<fields>
        <fullName>Qualification_Type__c</fullName>
        <label>Qualification Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Disqualifying Conviction</fullName>
                </value>
                <value>
                    <fullName>Disqualifying Conviction - Armed Only</fullName>
                </value>
                <value>
                    <fullName>No Conviction</fullName>
                </value>
                <value>
                    <fullName>Non-Disqualifying Conviction</fullName>
                </value>
                <value>
                    <fullName>Unknown Conviction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Release</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sex_Offense__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sex Offense</label>
        <type>Checkbox</type>
    </fields>
    <label>Criminal History</label>
    <nameField>
        <label>Criminal History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Criminal History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>